<resources>
    <string name="app_name">iTubeApp</string>
    <string name="username_label">Username:</string>
    <string name="username">Enter Username</string>
    <string name="password_label">Password:</string>
    <string name="password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="youtube_url">YouTube URL:</string>
    <string name="play">PLAY</string>
    <string name="add_to_playlist">ADD TO PLAYLIST</string>
    <string name="my_playlist">MY PLAYLIST</string>
    <string name="enter_youtube_url_hint">Enter YouTube URL</string>
    <string name="my_playlist_title">My Playlist</string>
</resources>