<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/signup_layout"
    android:background="@color/dark_back">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/light_back">
        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/dark_accent"
            android:importantForAccessibility="yes"
            android:autofillHints="name" />
        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@color/dark_accent"
            android:importantForAccessibility="yes"
            android:autofillHints="username" />
        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_accent"
            android:importantForAccessibility="yes"
            android:autofillHints="password" />
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_accent"
            android:importantForAccessibility="yes"
            android:autofillHints="password" />
        <Button
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/dark_accent"
            android:text="@string/create_account"/>
    </LinearLayout>
</LinearLayout>