<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:id="@+id/home_layout"
        android:background="@color/dark_back">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/light_back">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/youtube_url_text"
            android:text="@string/youtube_url"
            android:textStyle="bold"
            android:textColor="@color/dark_text"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="6dp"/>
        <EditText
            android:id="@+id/youtube_url"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/youtube_url_text"
            android:minHeight="50dp"
            android:hint="@string/enter_youtube_url_hint"
            android:textColorHint="@color/dark_accent"
            android:inputType="textUri"
            android:autofillHints=""/>
        <Button
            android:id="@+id/playButton"
            android:layout_below="@id/youtube_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:backgroundTint="@color/dark_accent"
            android:layout_alignStart="@id/youtube_url"
            android:layout_alignEnd="@id/youtube_url"
            android:layout_marginTop="16dp" />
        <Button
            android:id="@+id/addToPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playButton"
            android:text="@string/add_to_playlist"
            android:backgroundTint="@color/dark_accent"
            android:layout_alignStart="@id/youtube_url"
            android:layout_alignEnd="@id/youtube_url"
            android:layout_marginTop="8dp"/>
        <Button
            android:id="@+id/myPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addToPlaylistButton"
            android:text="@string/my_playlist"
            android:backgroundTint="@color/dark_accent"
            android:layout_alignStart="@id/youtube_url"
            android:layout_alignEnd="@id/youtube_url"
            android:layout_marginTop="8dp"/>
    </RelativeLayout>
</RelativeLayout>
