<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/main"
    android:background="@color/dark_back">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:backgroundTint="@color/light_back">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="horizontal"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="32dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textColor="@color/dark_text"
                android:layout_gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <EditText
                android:id="@+id/username"
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:minWidth="175dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:importantForAccessibility="yes"
                android:textColorHint="@color/dark_accent"
                android:autofillHints="username"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@color/dark_text"
                android:layout_gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:minHeight="50dp"
                android:minWidth="175dp"
                android:hint="@string/password"
                android:textColorHint="@color/dark_accent"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:importantForAccessibility="yes"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:minWidth="150dp"
                android:backgroundTint="@color/dark_accent"/>
            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minWidth="150dp"
                android:backgroundTint="@color/dark_accent"
                android:text="@string/signup"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>